heros-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heros
  labels:
    app: heros
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heros
  template:
    metadata:
      labels:
        app: heros
    spec:
      containers:
        - image: 'cffrestre/diplomado-ci-cd:dfc06b3d7620ca2f1b5d227378942303f4c39670'
          name: heros
          ports:
            - containerPort: 4200
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200m"
          startupProbe:
            httpGet:
              path: /
              port: 4200
            initialDelaySeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 4200
