load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: LoadBalancer
  selector:
    app: heros
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4200
