heros-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heros
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: heros
            port:
              number: 80
        path: /
        pathType: Prefix
